# pycaps

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  outdated_README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
docs/: API_USAGE.md  CLI.md  CONFIG_REFERENCE.md  CORE_STRUCTURE.md  EXAMPLES.md  TAGS.md  TEMPLATES.md
src/pycaps/: __init__.py  caps_pipeline.py  cli.py  logger.py  models.py  processor.py
src/pycaps/ai/: gpt.py  llm.py  llm_apis.py  llm_provider.py
src/pycaps/animation/: __init__.py  animation.py  animation_config.py  base_animation.py  basic_animation.py  definitions.py  element_animator.py  preset_animation.py  primitive_animation.py
src/pycaps/animation/builtin/: __init__.py  bounce_in.py  fade_in.py  fade_out.py  pop_in.py  slide_in.py  typewriting_animation.py  zoom_in.py
src/pycaps/animator/: __init__.py  animation.py  animation_config.py  element_animator.py
src/pycaps/api/: api_key_service.py  api_sender.py  emoji_in_segments_api.py  pycaps_tagger_api.py
src/pycaps/cli/: cli.py  config_cli.py  render.py  render_cli.py
src/pycaps/common/: __init__.py  element_container.py  models.py  types.py
src/pycaps/css/: __init__.py  css_class.py  css_classes.py  css_subtitle_renderer.py  playwright_screenshot_capturer.py  rendered_image_cache.py
src/pycaps/effect/: __init__.py  base_effect_generator.py  effect.py  emoji_in_segment_effect.py  emoji_in_word_effect.py  karaoke_effect_generator.py  modify_words_effect.py  to_uppercase_effect.py
src/pycaps/effect/clip/: __init__.py  animate_segment_emojis_effect.py  clip_effect.py  typewriting_effect.py
src/pycaps/effect/decorator/: __init__.py  animation_effect_decorator.py  base_animation_effect_decorator.py  effect_by_sentence_decorator.py  emoji_effect_decorator.py
src/pycaps/effect/sound/: sound_effect.py
src/pycaps/effect/text/: __init__.py  emoji_in_segment_effect.py  emoji_in_word_effect.py  modify_words_effect.py  to_uppercase_effect.py
src/pycaps/element/: __init__.py  models.py  tag_based_selector.py  time_event_selector.py  word_clip_selector.py  word_state_selector.py
src/pycaps/layout/: __init__.py  definitions.py  layout_calculator.py  layout_models.py  layout_updater.py  line_splitter.py  models.py  positions_calculator.py  subtitle_layout_service.py  word_size_calculator.py  word_width_calculator.py
src/pycaps/pipeline/: __init__.py  caps_pipeline.py  caps_pipeline_builder.py  json_config_loader.py  json_schema.py  template_loader.py
src/pycaps/renderer/: __init__.py  base_subtitle_renderer.py  css_subtitle_renderer.py  playwright_screenshot_capturer.py  rendered_image_cache.py  renderer_page.py
src/pycaps/renderer/previewer/: css_subtitle_previewer.py
src/pycaps/renderers/: __init__.py  base_subtitle_renderer.py  css_subtitle_renderer.py
src/pycaps/segment/: __init__.py  base_segment_rewritter.py  limit_by_chars_rewritter.py  limit_by_words_rewritter.py
src/pycaps/segmenter/: __init__.py  base_segmenter.py  limit_by_chars_segmenter.py  limit_by_words_segmenter.py  limit_words_segementer.py
src/pycaps/selector/: tag_based_selector.py  time_event_selector.py
src/pycaps/subtitle_generator/: __init__.py  base_generator.py  karaoke_generator copy.py  karaoke_generator.py  subtitle_layout_generator.py  subtitle_models.py
src/pycaps/tag/: __init__.py  builtin_tag.py  builtin_tag_condition.py  tag.py  tag_condition.py
src/pycaps/tag/tagger/: __init__.py  ai_tagger.py  llm_tagger.py  semantic_tagger.py
src/pycaps/tagger/: llm_tagger.py  models.py  semantic_tagger.py
src/pycaps/template/: template_loader.py  template_service.py
src/pycaps/templates/beast/: config.json
src/pycaps/templates/default/: styles.css
src/pycaps/templates/hacker/: config.json  styles.css
src/pycaps/templates/minimalist/: config.json
src/pycaps/templates/minimalist-2/: config.json  styles.css
src/pycaps/templates/retro-gaming/: config.json  styles.css
src/pycaps/templates/retro_future/: config.json  new.css  styles.css
src/pycaps/templates/tiktok-style/: config.json  styles.css
src/pycaps/transcriber/: __init__.py  base_transcriber.py  google_audio_transcriber.py  whisper_audio_transcriber.py  whisper_transcriber.py
src/pycaps/transcriber/editor/: editor.html  transcription_editor.py
src/pycaps/transcriber/rewriter/: __init__.py  base_segment_rewriter.py  limit_by_chars_rewriter.py  limit_by_words_rewriter.py
src/pycaps/transcriber/rewritter/: __init__.py  base_segment_rewritter.py  limit_by_chars_rewritter.py  limit_by_words_rewritter.py
src/pycaps/transcribers/: __init__.py  base_transcriber.py
src/pycaps/utils/: alignment_utils.py  layout_utils.py  script_utils.py  time_utils.py  word_state_finder.py
src/pycaps/video/: subtitle_clips_generator.py  video_generator.py
(+42 files in other folders)
