[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycaps"
version = "0.1.0"
authors = [
  { name="Franco Zanardi", email="francozanardi97@gmail.com" },
]
description = "A Python tool to automatically generate and add styled subtitles and karaoke effects to videos."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["video", "subtitles", "karaoke", "whisper", "moviepy", "captions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai-whisper",
    "moviepy",
    "playwright"
]

[project.urls]
"Homepage" = "https://github.com/francozanardi/pycaps"
"Repository" = "https://github.com/francozanardi/pycaps"
"Bug Tracker" = "https://github.com/francozanardi/pycaps/issues"
